Turn on production mode as default

--- a/config.yaml
+++ b/config.yaml
@@ -15,4 +15,4 @@ xgb:
   num_iterations: 100
   tree_num: 500
 
-production_mode: False # Turn on to use environment variables such as data path, server address, certificates etc.
+production_mode: True # Turn on to use environment variables such as data path, server address, certificates etc.
