--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-flwr==1.4.0
+flwr==1.5.0
+imblearn==0.0
 joblib==1.2.0
 matplotlib==3.7.1
+mlxtend==0.23.0
 numpy==1.24.3
 openml==0.13.1
 pandas==2.0.1
