Clean code and update README

--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,6 @@ xgb:
   tree_num: 500
 
 linear_models:
-  model_type: LR #elastic_net,LSVC, LR
   n_features: 9 
 
 dropout: 
@@ -34,4 +33,4 @@ dropout:
 smoothWeights: 
   smoothing_strenght: 0.5 #Value between 0 and 1
 
-production_mode: True # Turn on to use environment variables such as data path, server address, certificates etc.
+production_mode: False # Turn on to use environment variables such as data path, server address, certificates etc.
