--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,3 @@
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Python.gitlab-ci.yml
-
-# Official language image. Look for the different tagged releases at:
-# https://hub.docker.com/r/library/python/tags/
-image: python:latest
-
 # Change pip's cache directory to be inside the project directory since we can
 # only cache local items.
 variables:
@@ -17,7 +8,6 @@ stages:
   - test
   - lint
 
-# https://pip.pypa.io/en/stable/topics/caching/
 cache:
   paths:
     - .cache/pip
@@ -32,7 +22,6 @@ build:
   stage: build
   script:
     - pip install .
-    # run the command here
   artifacts:
     paths:
       - build/*
@@ -40,14 +29,12 @@ build:
 test:
   stage: test
   script:
-    - pip install ruff tox  # you can also use tox
-    # - pip install --editable ".[test]"
+    - pip install ruff tox
     - tox -e py
 
 lint:
   stage: lint
   script:
-    - pip install ruff tox  # you can also use tox
-    # - pip install --editable ".[test]"
+    - pip install ruff tox
     - tox -e ruff
   
