Add verbose output in tests

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ wheel_build_env = .pkg
 deps =
     pytest>=6
 commands =
-    pytest {tty:--color=yes} {posargs}
+    pytest {tty:--color=yes} {posargs} -vvv
 
 [testenv:ruff]  
 description = run linter
