Fix pytest install

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ build:
 test:
   stage: test
   script:
-    - pip install ruff tox
+    - pip install pytest
     - pip install .
     # - tox -e py
     - pytest -vvv
