--- a/config.yaml
+++ b/config.yaml
@@ -1,54 +1,89 @@
-data_path: dataset/
-# dataset: ukbb_cvd # cvd, kaggle_hf
-dataset: kaggle_hf # cvd, kaggle_hf
-model: logistic_regression
-# model: random_forest
+################################################################################
+
+# Flcore configuration file
+
+################################################################################
+# Experiment parameters
+
+##############  Dataset type to use
+# Possible values: , kaggle_hf, mnist, dt4h_format
+dataset: kaggle_hf
+
+##############  Number of clients (data centers) to use for the training
 num_clients: 3
-# num_clients: 3 # kaggle_hf
-num_rounds: 100
 
+############## Model type
+# Possible values: logistic_regression, lsvc, elastic_net, random_forest, weighted_random_forest, xgb
+model: logistic_regression
+
+############## Training length
+num_rounds: 50
+
+############## Metric to select the best model
+# Possible values: accuracy, balanced_accuracy, f1, precision, recall
+checkpoint_selection_metric: balanced_accuracy
+
+############## Experiment logging
 experiment:
-  debug: true
+  name: imbalance_1_repeat_equal_voting
   log_path: logs
-  name: experiment_1
+  debug: true
 
+
+################################################################################
+# Aggregation methods
+
+############## Centre-dropout
+# Possible values: None, random_dropout, Fast_at_odd_rounds, LessParticipants
+dropout_method: None
 dropout:
   percentage_drop: 50
-dropout_method: None
-# dropout_method: random_dropout
-# dropout_method: Fast_at_odd_rounds
-# dropout_method: LessParticipants
 
-  # name: kaggle_SlowerQuartile
-  # name: test_best_round
-linear_models:
-  # n_features: 40
-  n_features: 9 # kaggle_hf
-local_port: 8081
-# model: xgb # logistic_regression, random_forest
-
-random_forest:
-  balanced_rf: true
+############## Weight smoothing
+# Possible values: None, SlowerQuartile, EqualVoting
+smooth_method: EqualVoting
 smoothWeights:
   smoothing_strenght: 0.5
-smooth_method: None
-# smooth_method: SlowerQuartile
-# smooth_method: EqualVoting
+
+################################################################################
+# Model specific parameters
+
+# Number of features to select for model input
+
+# info: If None, all features are used
+# higher value of features may increase performance at the risk of overfitting
+# Kaggle dataset has 9 features
+# UKBB dataset has 40 features
+
+linear_models:
+  n_features: 9 
+
+# Random Forest
+random_forest:
+  balanced_rf: true
+
+# Weighted Random Forest
 weighted_random_forest:
   balanced_rf: true
   levelOfDetail: DecisionTree
+
+# XGBoost
 xgb:
   batch_size: 32
   num_iterations: 100
   task_type: BINARY
   tree_num: 500
 
+
 held_out_center_id: -1
 
+################################################################################
+# Library configuration
 
-checkpoint_selection_metric: balanced_accuracy
 seed: 42
 
 local_port: 8081
 
-production_mode: True # Turn on to use environment variables such as data path, server address, certificates etc.
+data_path: dataset/
+
+production_mode: False # Turn on to use environment variables such as data path, server address, certificates etc.
