Change production: True

--- a/config.yaml
+++ b/config.yaml
@@ -93,4 +93,4 @@ local_port: 8081
 
 data_path: dataset/
 
-production_mode: False # Turn on to use environment variables such as data path, server address, certificates etc.
+production_mode: True # Turn on to use environment variables such as data path, server address, certificates etc.
