--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ pandas==2.0.1
 PyYAML==6.0.1
 scikit_learn==1.2.2
 torch==2.0.1
+--extra-index-url https://download.pytorch.org/whl/cpu
 torchmetrics==0.11.4
 tqdm==4.65.0
 xgboost==1.7.5
