--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ dataset: custom
 # New variables
 # ****** * * * * * * *  *  *   *    *    *  *  * * * * * * * *******************
 metadata_file: metadata.json
-data_file : dataset_new.parquet
+data_file : 3362-2045-1944.parquet
 # Options: IQR STD MIN_MAX
 normalization_method : IQR
 
