--- a/config.yaml
+++ b/config.yaml
@@ -10,7 +10,7 @@
 ################################################################################
 
 ##############  Dataset type to use
-# Possible values: , kaggle_hf, mnist, dt4h_format
+# Possible values: , kaggle_hf, diabetes, mnist, dt4h_format
 dataset: dt4h_format
 #custom
 #libsvm
@@ -33,7 +33,7 @@ train_size: 0.7
 # ****** * * * * * * *  *  *   *    *    *  *  * * * * * * * *******************
 
 ##############  Number of clients (data centers) to use for training
-num_clients: 1
+num_clients: 3
 
 ############## Model type
 # Possible values: logistic_regression, lsvc, elastic_net, random_forest, weighted_random_forest, xgb
@@ -43,7 +43,7 @@ model: random_forest
 #random_forest
 
 ############## Training length
-num_rounds: 50
+num_rounds: 5
 
 ############## Metric to select the best model
 # Possible values: accuracy, balanced_accuracy, f1, precision, recall
@@ -87,6 +87,8 @@ smoothWeights:
 linear_models:
   n_features: 9
 
+n_features: 9
+
 # Random Forest
 random_forest:
   balanced_rf: true
@@ -101,7 +103,7 @@ xgb:
   batch_size: 32
   num_iterations: 100
   task_type: BINARY
-  tree_num: 500
+  tree_num: 10
 
 
 held_out_center_id: -1
