--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@ flwr==1.5.0
 imblearn==0.0
 joblib==1.2.0
 matplotlib==3.7.1
+numpy==1.26.4
 mlxtend==0.23.0
-numpy==1.24.3
 openml==0.13.1
-pandas==2.0.1
+pandas==2.2.1
 PyYAML==6.0.1
-scikit_learn==1.2.2
-torch==2.0.1
+scikit_learn
+torch==2.3.1
 torchmetrics==0.11.4
 tqdm==4.65.0
 xgboost==1.7.5
 pdfkit==1.0.0
-scikit-survival==0.25.0
+scikit-survival==0.22.2
 fpboost==0.1.0
